[gd_scene load_steps=3 format=2]

[ext_resource path="res://Order.tscn" type="PackedScene" id=1]
[ext_resource path="res://OrderFulfillment.gd" type="Script" id=2]

[node name="OrderFulfillment" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "X"

[node name="Order" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 412.0
margin_bottom = 111.0
readOnly = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 115.0
margin_right = 412.0
margin_bottom = 129.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Sex"

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Size (mm)"

[node name="Label3" type="Label" parent="HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Obedience"

[node name="Label4" type="Label" parent="HBoxContainer"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Select"

[node name="NoFleasLabel" type="Label" parent="."]
visible = false
margin_top = 133.0
margin_right = 412.0
margin_bottom = 147.0
text = "None of your fleas meet this order's requirement"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 133.0
margin_right = 412.0
margin_bottom = 822.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="FleaContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 412.0
margin_bottom = 689.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FulfillButton" type="Button" parent="."]
margin_top = 826.0
margin_right = 412.0
margin_bottom = 846.0
disabled = true
text = "Fulfill"
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="FulfillButton" to="." method="_on_FulfillButton_pressed"]
